--- a/submissions/submission.ipynb
+++ b/submissions/submission.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0555ac53",
+   "id": "da7a6401",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "57f40e28",
+   "id": "5fdf4897",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "id": "bea1ba6f",
+   "execution_count": 151,
+   "id": "7c51b626",
    "metadata": {},
    "outputs": [
     {
@@ -186,20 +186,20 @@
        "[1239 rows x 6 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample_sub_1 = pd.read_csv('./sample_submissions/sample_sub_2.csv')\n",
+    "sample_sub_1 = pd.read_csv('../submissions/sample_submissions/sample_sub_2.csv')\n",
     "sample_sub_1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "2cc499fe",
+   "id": "7a447fc9",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "89b8fd31",
+   "id": "88af2772",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "165c7a09",
+   "id": "1ea50053",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "e80433f1",
+   "id": "758d8c84",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "c1ec48a2",
+   "id": "ef9e2cba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bed4f62",
+   "id": "1bb12cd4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3446853f",
+   "id": "c1539b27",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3e1df3b",
+   "id": "555acb41",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b4aa888",
+   "id": "181cbb12",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "e895e678",
+   "id": "f8dcad31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ada5329",
+   "id": "53cf00a9",
    "metadata": {},
    "outputs": [],
    "source": []
